--- a/views/htmlpages/index.html
+++ b/views/htmlpages/index.html
@@ -31,14 +31,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-2">
+            <li class="nav-item mr-2" id="navLogin">
+                <a class="nav-link" href="#">Log in</a>
+            </li>
             <li class="nav-item mr-2" id="navRegister">
                 <a class="nav-link" href="#">Register</a>
             </li>
-            <li class="nav-item mr-2" id="navLogin">
-                <a class="nav-link" href="#">Login</a>
-            </li>
             <li class="nav-item mr-2" id="navLogout">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="#">Log out</a>
             </li>
         </ul>
         <span class="ml-auto navbar-text">
@@ -66,15 +66,15 @@
             </div>
         </div>
     </div>
-    <div class="jumbotron jumbotron1 jumbotron-fluid" id="loginDiv">
+    <div class="jumbotron jumbotron1 jumbotron-fluid" id="registerDiv">
         <div class="container">
             <form>
                 <div class="row">
-                    <h1>Login</h1>
+                    <h1>Register</h1>
                 </div>
+
                 <div class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-8">
+                    <div class="col-sm">
                         <div class="form-group">
                             <label for="email">Email Address</label>
                             <input type="email" class="form-control email" placeholder="Enter Email">
@@ -83,24 +83,35 @@
                             <label for="password">Password</label>
                             <input type="password" class="form-control password" placeholder="Enter Password">
                         </div>
-                        <div class="col-sm-2"></div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="form-group">
+                            <label for="firstName">First Name</label>
+                            <input type="firstName" class="form-control firstName" placeholder="Enter First Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName">Last Name</label>
+                            <input type="lastName" class="form-control lastName" placeholder="Enter Last Name">
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-6">
-                        <button type="submit" class="btn btn-primary submit">Login</button>
+                        <div class="form-group">
+                                <label for="studentID">Student ID</label>
+                                <input type="studentID" class="form-control password" placeholder="Enter Student ID">
+                            </div>
+                    <div class="col-sm">
+                        <button type="submit" class="btn btn-primary submit">Register</button>
                     </div>
                 </div>
             </form>
-            <div class="col-sm-3"></div>
         </div>
     </div>
-    <div class="jumbotron jumbotron2 jumbotron-fluid" id="registerDiv">
+    <div class="jumbotron jumbotron2 jumbotron-fluid" id="loginDiv">
         <div class="container">
             <form>
                 <div class="row">
-                    <h1>Register</h1>
+                    <h1>Log In</h1>
                 </div>
                 <div class="row">
                     <div class="col-sm-2"></div>
@@ -119,7 +130,7 @@
                 <div class="row">
                     <div class="col-sm-3"></div>
                     <div class="col-sm-6">
-                        <button type="submit" class="btn btn-primary submit">Register</button>
+                        <button type="submit" class="btn btn-primary submit">Log In</button>
                     </div>
                 </div>
             </form>
@@ -163,64 +174,63 @@
 
         $("#showRegister").click(displayRegister);
 
-        // // Firebase setup
-        // // Initialize Firebase
-        // var config = {
-        //     apiKey: "AIzaSyCxWT735EGIcbdNLZyxsWYns14mJ7UvOtg",
-        //     authDomain: "mygradebook-355d0.firebaseapp.com",
-        //     databaseURL: "https://mygradebook-355d0.firebaseio.com",
-        //     projectId: "mygradebook-355d0",
-        //     storageBucket: "mygradebook-355d0.appspot.com",
-        //     messagingSenderId: "619478408217"
-        // };
-        // firebase.initializeApp(config);
+        // Firebase setup
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyCxWT735EGIcbdNLZyxsWYns14mJ7UvOtg",
+            authDomain: "mygradebook-355d0.firebaseapp.com",
+            databaseURL: "https://mygradebook-355d0.firebaseio.com",
+            projectId: "mygradebook-355d0",
+            storageBucket: "mygradebook-355d0.appspot.com",
+            messagingSenderId: "619478408217"
+        };
+        firebase.initializeApp(config);
 
-        // var database = firebase.database();
+        var database = firebase.database();
 
-        // // Function to run based on if user is logged in or not
-        // firebase.auth().onAuthStateChanged(function (user) {
-        //     if (user) {
-        //         // User is signed in.
-        //         displayChoices();
-        //         $("#intro").hide();
-        //         console.log("it's been called")
-        //     } else {
-        //         // No user is signed in.
-        //         userLogOut();
-        //     }
-        // });
+        // Function to run based on if user is logged in or not
+        firebase.auth().onAuthStateChanged(function (user) {
+            if (user) {
+                // User is signed in
+                // display landing page
+            } else {
+                // No user is signed in.
+                userLogOut();
+                // display sorry you are not recognized by our database as a student
+            }
+        });
 
-        // // Function to register a new user
-        // $(".register form").on("submit", function (event) {
-        //     event.preventDefault();
+        // Function to register a new user
+        $(".register form").on("submit", function (event) {
+            event.preventDefault();
 
-        //     var email = $(".register .email").val();
-        //     var password = $(".register .password").val();
+            var email = $(".register .email").val();
+            var password = $(".register .password").val();
 
-        //     firebase.auth().createUserWithEmailAndPassword(email, password)
-        //         .then(function (user) {
-        //             console.log(user);
-        //         })
-        //         .catch(function (err) {
-        //             console.log(err);
-        //         })
-        // });
+            firebase.auth().createUserWithEmailAndPassword(email, password)
+                .then(function (user) {
+                    console.log(user);
+                })
+                .catch(function (err) {
+                    console.log(err);
+                })
+        });
 
         // Function to login existing user
-        // $(".login form").on("submit", function (event) {
-        //     event.preventDefault();
+        $(".login form").on("submit", function (event) {
+            event.preventDefault();
 
-        //     var email = $(".login .email").val();
-        //     var password = $(".login .password").val();
+            var email = $(".login .email").val();
+            var password = $(".login .password").val();
 
-        //     firebase.auth().signInWithEmailAndPassword(email, password)
-        //         .then(function (user) {
-        //             console.log(user);
-        //         })
-        //         .catch(function (err) {
-        //             console.log(err);
-        //         });
-        // });
+            firebase.auth().signInWithEmailAndPassword(email, password)
+                .then(function (user) {
+                    console.log(user);
+                })
+                .catch(function (err) {
+                    console.log(err);
+                });
+        });
 
     })
 
