--- a/views/htmlpages/index.html
+++ b/views/htmlpages/index.html
@@ -53,16 +53,20 @@
             <li data-target="#carousel" data-slide-to="0" class="active"></li>
             <li data-target="#carousel" data-slide-to="1" class="active"></li>
             <li data-target="#carousel" data-slide-to="2" class="active"></li>
+            <li data-target="#carousel" data-slide-to="3" class="active"></li>
         </ol>
         <div class="carousel-inner" data-interval="5000">
             <div class="carousel-item active">
-                <img src="../../public/images/teacher.jpg" class="d-block w-100" alt="Slide 1">
+                <img src="../../public/images/a-teacher.jpg" class="d-block w-100" alt="Slide 1">
             </div>
             <div class="carousel-item" data-interval="5000">
-                <img src="../../public/images/teacher2.jpg" class="d-block w-100" alt="Slide 2">
+                <img src="../../public/images/child.jpg" class="d-block w-100" alt="Slide 2">
             </div>
             <div class="carousel-item" data-interval="5000">
-                <img src="../../public/images/teacher3.jpg" class="d-block w-100" alt="Slide 3">
+                <img src="../../public/images/kids-and-teacher.jpg" class="d-block w-100" alt="Slide 3">
+            </div>
+            <div class="carousel-item" data-interval="5000">
+                <img src="../../public/images/teach.jpg" class="d-block w-100" alt="Slide 4">
             </div>
         </div>
     </div>
@@ -139,8 +143,9 @@
 <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-        event.preventDefault();
+
         displayLogin();
+        event.preventDefault();
         // Function to run when user clicks Register button in navbar
         $("#navRegister").click(displayRegister);
 
