--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,7 @@
 .list-group-item {
   line-height: 2.5;
 }
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
