--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,3 +5,7 @@ a {
   color: inherit; /* blue colors for links too */
   text-decoration: inherit; /* no underline */
 }
+body{
+  background-image: url(../images/geometry.jpg);
+  color: white;
+}
