--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,5 +6,5 @@ a {
   text-decoration: inherit; /* no underline */
 }
 body{
-  background-image: url(../images/geometry.jpg);
+  background-image: url(../images/dino.jpg);
 }
